✨ Add shimmering neural heart icon with star effects
- Increased icon size from 24px to 32px default
- Added radial gradient for magical shimmer effect
- Implemented SVG filters for sparkling star glow
- Added scale animations for dynamic pulsing
- Created animated favicon with neural heart
- Fixed component imports and build issues
- Enhanced SEO with proper favicon links

The neural network heart now has beautiful star-like shimmer effects that make it truly magical while maintaining sophisticated design aesthetics.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,29 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>psyt.ai - Mental Wellness Platform | AI-Powered Apps for Better Living</title>
   <meta name="description" content="psyt.ai revolutionizes mental wellness through AI-powered apps that make feeling better as natural as using your favorite digital tools. Experience stealth wellness technology." />
+  
+  <!-- Enhanced SEO Meta Tags -->
+  <meta name="keywords" content="mental wellness, AI apps, psychological insights, mental health technology, wellness platform, AI-powered therapy, digital wellness" />
+  <meta name="author" content="PSYT.AI" />
+  <meta name="robots" content="index, follow" />
+  <link rel="canonical" href="https://psyt.ai" />
+  
+  <!-- Open Graph Meta Tags -->
+  <meta property="og:title" content="psyt.ai - Mental Wellness Platform | AI-Powered Apps for Better Living" />
+  <meta property="og:description" content="psyt.ai revolutionizes mental wellness through AI-powered apps that make feeling better as natural as using your favorite digital tools. Experience stealth wellness technology." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://psyt.ai" />
+  <meta property="og:site_name" content="PSYT.AI" />
+  
+  <!-- Twitter Card Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="psyt.ai - Mental Wellness Platform | AI-Powered Apps for Better Living" />
+  <meta name="twitter:description" content="psyt.ai revolutionizes mental wellness through AI-powered apps that make feeling better as natural as using your favorite digital tools. Experience stealth wellness technology." />
+  
+  <!-- Favicon -->
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <link rel="icon" type="image/png" href="/favicon.png" sizes="32x32" />
+  <link rel="apple-touch-icon" href="/favicon.png" sizes="180x180" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
